tests/errors/type-error-not.ja
procedure main()
    if !5 then
        skip
    fi false
